# opera-sds-pcm

./: .gitignore  CONTRIBUTING.md  COPYING  LICENSE  README.md  TESTING.md  cmr_audit_dswx_s1.py  conda_requirements.txt  pip.conf  pyproject.toml  pytest.ini  rtc_utils.py  run_opera_smoke_tests.sh  run_pge.sh  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
Datatake_Accountability/: eval_datatake.py  eval_datatake.sh
Jenkins/: e2e-opera-pcm-develop.sh
L3_DSWx_state_config_upserter/: eval_state_config.py  eval_state_config.sh
TFdb/: README.md
Track_Frame_Accountability/: catalog.py  create_track_frame_accountability_catalog.py  es_connection.py  eval_track_frame.py  eval_track_frame.sh
airflow/: .gitignore  requirements.txt
benchmark/: README.md  benchmark_test_util.py  conftest.py  test_benchmark.py  tosca.py
cluster_provisioning/: README.md  clean_s3_buckets.sh  clear_grq_aws_es.py  delete_event_source_mapping.py  int_pst_ops_devcommon_override.tf  open_urls.sh  purge_aws_resources.sh  remove_s3_bucket_notification.sh  restore_snapshot.sh  run_opera_smoke_tests.sh  run_opera_unit_tests.sh  run_smoke_test-pge.sh  run_smoke_test.sh  run_smoke_test_nen.sh  setup_trigger_rules.sh
commons/: es_connection.py  logger.py
conf/: AlgoParams.yaml.L3_DISP_S1.jinja2.tmpl  AlgoParams.yaml.L3_DIST_S1.jinja2.tmpl  AlgoParams.yaml.L3_DSWx_S1.jinja2.tmpl  RunConfig.yaml.L0A.jinja2.tmpl  RunConfig.yaml.L2_CSLC_S1.jinja2.tmpl  RunConfig.yaml.L2_CSLC_S1_STATIC.jinja2.tmpl  RunConfig.yaml.L2_HLS.jinja2.tmpl  RunConfig.yaml.L2_RTC_S1.jinja2.tmpl  RunConfig.yaml.L2_RTC_S1_STATIC.jinja2.tmpl  RunConfig.yaml.L3_DISP_NI.jinja2.tmpl  RunConfig.yaml.L3_DISP_S1.jinja2.tmpl  RunConfig.yaml.L3_HLS.jinja2.tmpl  (+12 more)
(+1172 files in other folders)
