[build-system]
requires = ["setuptools >= 60.7.0"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "opera_pcm"
version = "1.0.0"
requires-python = ">= 3.8"
dependencies = [
    'smart_open',
    'pandas',
    'h5py'
]

[project.optional-dependencies]
precommit = [
    "autopep8",
    "black",
    "yapf"
]
localtest = [
    "pytest>=7.1.1",
    "pytest-mock>=3.7.0",
    "coverage",
    "pytest-cov",
    # See the relevant release notes for HySDS for the corresponding versions of these dependencies.
    "prov-es@https://github.com/hysds/prov_es/archive/refs/tags/v0.2.2.tar.gz",
    "osaka@https://github.com/hysds/osaka/archive/refs/tags/v1.1.0.tar.gz",
    "hysds-commons@https://github.com/hysds/hysds_commons/archive/refs/tags/v1.0.9.tar.gz",
    "hysds@https://github.com/hysds/hysds/archive/refs/tags/v1.1.5.tar.gz",
    "chimera@https://github.com/hysds/chimera/archive/refs/tags/v2.2.1.tar.gz"
]
dockertest = [
    "pytest>=7.1.1",
    "scripttest",
    "mock",
    "mockito",
    "flake8",
    "pytest-cov",
    "flake8-junit-report",
    "flake8-string-format",
    "xmltodict",
    "yamale==3.0.6",
    "ruamel.yaml",
    "elasticmock",
    "geopandas",
    "smart_open"
    # this dependency is not yet compatible with pyproject.toml, and is installed separately. See ${PROJECT_ROOT}/docker/Dockerfile
    # "pcm_commons"
]

[tool.pytest.ini_options]
minversion = "7.1"
testpaths = ["tests"]
#addopts = "--cov --cov-report xml --cov-report term --cov-report html"
# "--cov" messes with the debugger. Use "--no-cov" to restore debugger behavior
#addopts = "--no-cov"
